Site horizontal scrollbar problem solved

--- a/geonode/static/geonode/css/style.css
+++ b/geonode/static/geonode/css/style.css
@@ -70,7 +70,7 @@ a:hover{
 .gd-footer-language{
     /*margin-left: 20px;*/
     margin-top: 40px;
-    width:220px;
+    width:200px;
 }
 @media (max-width: 767px) {
   .gd-footer-language{
